vue-tooltip-z-index-hack is no longer required as translate3d in Chrome now respects z-index.

--- a/src/renderer/styles/_error_tooltip.scss
+++ b/src/renderer/styles/_error_tooltip.scss
@@ -1,15 +1,3 @@
-@at-root {
-    // So this is a fix for a really icky issue with vue-tooltip's use of transform: translate3d directives, which make
-    // it impossible to properly use z-indexes. Popup and WaitingScreen will add this to the root element when they are
-    // created and then remove it when they are destroyed, and we will become invisible accordingly.
-
-    .vue-tooltip-z-index-hack {
-        .tooltip {
-            display: none;
-        }
-    }
-}
-
 .tooltip.error {
     .tooltip-inner {
         color: var(--color-status-error-contrast);
